--- a/samples/navigation/time_style_navigation/index.html
+++ b/samples/navigation/time_style_navigation/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
-
+    <h1>https://codepen.io/nailaahmad/pen/MyZXVE</h1>
 
     <div class="wrapper">
 
@@ -104,6 +104,11 @@
 
     </div>
 
+    <!--
     <script src="/lib/vendor/jquery/3.5.1/jquery.js"></script>
+    -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
     <script src="default.js"></script>
 </body>
